--- a/lesson_10/Amazon/index.html
+++ b/lesson_10/Amazon/index.html
@@ -50,8 +50,8 @@
                             <h1>Amazon Payment Products</h1>
                             <nav>
                                 <ul>
-                                    <li><a href="#">Careers</a></li>
-                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">Sell products on Amazon</a></li>
+                                    <li><a href="#">Sell products on Amazon</a></li>
                                     <li><a href="#">About Amazon</a></li>
                                     <li><a href="#">Investor Relations</a></li>
                                 </ul>
@@ -80,13 +80,234 @@
 
         <!-- Footer Option Section Start -->
         <section id="footer-amazon-option">
-
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-7 col-lg-7 col-md-7 col-sm-7 col-xs-7 flex-center">
+                        <div class="footer-logo">
+                            <a href="#">
+                                <img src="./assets/Images/Amazon_Logo.png" alt="Amazon logo">
+                            </a>
+                        </div>
+                        <div class="options-area">
+                            <div class="dropdown-language">
+                                <img src="assets/Images/icon-world-16.png" alt="world icon">
+                                <button class="dropbtn">English</button>
+                                <div class="dropdown-content">
+                                  <a href="#">Link 1</a>
+                                  <a href="#">Link 2</a>
+                                  <a href="#">Link 3</a>
+                                </div>
+                                <img src="assets/Images/icons8-move-grabber-13.png" alt="up down selection icon">
+                            </div>
+                            <button class="valute-btn">
+                                <a href="#">$ USD - U.S Dollar</a>
+                            </button>
+                            <button class="vpn">
+                                <img src="assets/Images/icons8-usa-flag-18.png" alt="USA flag">
+                                <a href="#">United States</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- Footer Option Section End -->
 
         <!-- Footer More On Section Start -->
         <section id="footer-moreOn-amazon">
-
+            <div class="container">
+                <div class="row">
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Music</h1>
+                            Stream millions of songs	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Ads</h1>
+                            Reach customers
+                            wherever they
+                            spend their time	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>6pm</h1>
+                            Score deals
+                            on fashion brands
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Business</h1>
+                            Everything For
+                            Your Business	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Music</h1>
+                            Stream millions of songs	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Ads</h1>
+                            Reach customers
+                            wherever they
+                            spend their time	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>6pm</h1>
+                            Score deals
+                            on fashion brands
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Business</h1>
+                            Everything For
+                            Your Business	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Music</h1>
+                            Stream millions of songs	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Ads</h1>
+                            Reach customers
+                            wherever they
+                            spend their time	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>6pm</h1>
+                            Score deals
+                            on fashion brands
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Business</h1>
+                            Everything For
+                            Your Business	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Music</h1>
+                            Stream millions of songs	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Ads</h1>
+                            Reach customers
+                            wherever they
+                            spend their time	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>6pm</h1>
+                            Score deals
+                            on fashion brands
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Business</h1>
+                            Everything For
+                            Your Business	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Music</h1>
+                            Stream millions of songs	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Ads</h1>
+                            Reach customers
+                            wherever they
+                            spend their time	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>6pm</h1>
+                            Score deals
+                            on fashion brands
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Business</h1>
+                            Everything For
+                            Your Business	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Music</h1>
+                            Stream millions of songs	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Ads</h1>
+                            Reach customers
+                            wherever they
+                            spend their time	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>6pm</h1>
+                            Score deals
+                            on fashion brands
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Business</h1>
+                            Everything For
+                            Your Business	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Music</h1>
+                            Stream millions of songs	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>Amazon Ads</h1>
+                            Reach customers
+                            wherever they
+                            spend their time	
+                        </a>                   
+                    </div>
+                    <div class="moreOn-cards">
+                        <a href="#">
+                            <h1>6pm</h1>
+                            Score deals
+                            on fashion brands
+                        </a>                   
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- Footer More On Section End -->
 
