--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -23,7 +23,7 @@
                             </div>
                             <div class="main">
                                 <div class="img-container">
-                                    <img src="" alt="">
+                                    <img src="./assets/images/icons8-company.png" alt="company logo">
                                 </div>
                                 <p>
                                     “AzInTelecom” MMC-nin mərkəzləşdirilmiş informasiya sistemlərinin yaradılmasında məqsəd vətəndaşlara, eləcə də sahibkarlara şəffaf və operativ xidmət göstərməkdir. Müvafiq informasiya sistemlərinin formalaşdırılması nəticəsində informasiya texnologiyalarının tətbiqi ilə innovativ idarəetmə təmin edilir, bir sıra çatışmazlıq aradan qaldırılır.
@@ -40,12 +40,12 @@
                         <div class="active-card">
                             <div class="header">
                                 <h1>
-                                    Sima
+                                    Beynəlxalq səs trafiki
                                 </h1>
                             </div>
                             <div class="main">
                                 <div class="img-container">
-                                    <img src="" alt="">
+                                    <img src="./assets/images/icons8-phone-100.png" alt="phone logo">
                                 </div>
                                 <p>
                                     “AzInTelecom” MMC-nin mərkəzləşdirilmiş informasiya sistemlərinin yaradılmasında məqsəd vətəndaşlara, eləcə də sahibkarlara şəffaf və operativ xidmət göstərməkdir. Müvafiq informasiya sistemlərinin formalaşdırılması nəticəsində informasiya texnologiyalarının tətbiqi ilə innovativ idarəetmə təmin edilir, bir sıra çatışmazlıq aradan qaldırılır.
@@ -62,12 +62,12 @@
                         <div class="active-card">
                             <div class="header">
                                 <h1>
-                                    Sima
+                                    BİZNES HƏLLƏRİ
                                 </h1>
                             </div>
                             <div class="main">
                                 <div class="img-container">
-                                    <img src="" alt="">
+                                    <img src="./assets/images/icons8-cloudy-100.png" alt="Cloud image">
                                 </div>
                                 <p>
                                     “AzInTelecom” MMC-nin mərkəzləşdirilmiş informasiya sistemlərinin yaradılmasında məqsəd vətəndaşlara, eləcə də sahibkarlara şəffaf və operativ xidmət göstərməkdir. Müvafiq informasiya sistemlərinin formalaşdırılması nəticəsində informasiya texnologiyalarının tətbiqi ilə innovativ idarəetmə təmin edilir, bir sıra çatışmazlıq aradan qaldırılır.
