--- a/lesson_22/index.html
+++ b/lesson_22/index.html
@@ -7,22 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="assets/Js/script.js" defer></script>
     <link rel="stylesheet" href="assets/Css/style.css">
-    <!-- <style>
-        .bg-card-css {
-            background: #EDEDE5;
-        }
-        .cart-wrapper {
-            transition: transform 0.3s ease-in-out;
-        }
-        .cart-wrapper.open {
-            transform: translateX(0);
-        }
-        @media (max-width: 640px) {
-            .cart-wrapper {
-                transform: translateX(100%);
-            }
-        }
-    </style> -->
 </head>
 <body class="bg-gray-100 min-h-screen">
     <div class="flex flex-col min-h-screen">
@@ -46,102 +30,34 @@
                     <h2 class="text-xl font-bold mb-4">Shopping Cart</h2>
                     <div id="cartItems" class="space-y-4 mb-4">
                         <!-- Cart items will be dynamically added here -->
+                        <!-- <div class="flex items-center justify-between">
+                            <div class="productInfo">
+                                <img src="https://picsum.photos/seed/LD01/48/48" alt="LD01 LOUNGE CHAIR" class="productImg">
+                                <span class="nameOfItem">LD01 LOUNGE CHAIR</span>
+                                <span class="text-center">$200</span>
+                            </div>
+                            <div class="countProduct">
+                                <button class="prev"></button>
+                                <span class="cursor-none">1</span>
+                                <button class="next"></button>
+                            </div>
+                        </div> -->
                     </div>
                     <div class="mt-4 flex justify-between">
                         <span>Total:</span>
                         <span id="cartTotal">$0</span>
                     </div>
-                    <div class="mt-6 flex  buttons-css justify-between space-x-4">
-                        <button id="closeCart" class="w-1/2 py-2 border border-white rounded hover:bg-gray-800 transition-colors">
-                            Remove
+                    <div id="btnArea" class="flex  buttons-css justify-between space-x-4">
+                        <!-- <button id="closeCart" class="w-1/2 py-2 border border-white rounded hover:bg-gray-800 transition-colors">
+                            Close
                         </button>
                         <button class="w-1/2 py-2 bg-yellow-500 text-black rounded hover:bg-yellow-600 transition-colors">
                             Check Out
-                        </button>
+                        </button> -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- <script>
-        const products = [
-            { id: 1, name: "LD01 LOUNGE CHAIR", price: 200, image: "assets/Images/1.png" },
-            { id: 2, name: "LD02 LOUNGE CHAIR", price: 250, image: "assets/Images/2.png" },
-            { id: 3, name: "LD03 LOUNGE CHAIR", price: 200, image: "assets/Images/3.png" },
-            { id: 4, name: "LD04 LOUNGE CHAIR", price: 200, image: "assets/Images/4.png" },
-            { id: 5, name: "LD05 LOUNGE CHAIR", price: 300, image: "assets/Images/5.png" },
-            { id: 6, name: "LD06 LOUNGE CHAIR", price: 200, image: "assets/Images/6.png" },
-            { id: 7, name: "LD07 LOUNGE CHAIR", price: 200, image: "assets/Images/7.png" },
-            { id: 8, name: "LD08 LOUNGE CHAIR", price: 250, image: "assets/Images/8.png" },
-        ];
-
-        const cart = [];
-        const productList = document.getElementById('productList');
-        const cartItems = document.getElementById('cartItems');
-        const cartTotal = document.getElementById('cartTotal');
-        const cartCount = document.getElementById('cartCount');
-        const cartToggle = document.getElementById('cartToggle');
-        const cartWrapper = document.getElementById('cartWrapper');
-        const closeCart = document.getElementById('closeCart');
-
-        function renderProducts() {
-            productList.innerHTML = products.map(product => `
-                <div class="bg-card-css rounded-lg shadow-md overflow-hidden">
-                    <div class="p-4">
-                        <img src="${product.image}" alt="${product.name}" class="w-full h-48 object-cover mb-4">
-                        <h2 class="font-semibold text-center">${product.name}</h2>
-                        <p class="text-center">$${product.price}</p>
-                    </div>
-                    <div class="px-4 pb-4">
-                        <button onclick="addToCart(${product.id})" class="w-full py-2 bg-gray-900 text-white rounded hover:bg-gray-700 transition-colors">
-                            Add to Cart
-                        </button>
-                    </div>
-                </div>
-            `).join('');
-        }
-
-        function addToCart(productId) {
-            const product = products.find(p => p.id === productId);
-            cart.push(product);
-            updateCart();
-        }
-
-        function removeFromCart(productId) {
-            const index = cart.findIndex(item => item.id === productId);
-            if (index !== -1) {
-                cart.splice(index, 1);
-                updateCart();
-            }
-        }
-
-        function updateCart() {
-            cartItems.innerHTML = cart.map(item => `
-                <div class="flex justify-between items-center">
-                    <span>${item.name}</span>
-                    <div>
-                        <span class="mr-4">$${item.price}</span>
-                        <button onclick="removeFromCart(${item.id})" class="text-red-500 hover:text-red-700">
-                            Remove
-                        </button>
-                    </div>
-                </div>
-            `).join('');
-
-            const total = cart.reduce((sum, item) => sum + item.price, 0);
-            cartTotal.textContent = `$${total}`;
-            cartCount.textContent = cart.length;
-        }
-
-        function toggleCart() {
-            cartWrapper.classList.toggle('open');
-        }
-
-        cartToggle.addEventListener('click', toggleCart);
-        closeCart.addEventListener('click', toggleCart);
-
-        renderProducts();
-    </script> -->
 </body>
 </html>
