--- a/lesson_27/index.html
+++ b/lesson_27/index.html
@@ -9,28 +9,28 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display">0</div>
+        <input type="text" class="display" placeholder="0"> 
         <div class="buttons">
-            <button class="operator">÷</button>
-            <button class="operator">-</button>
-            <button class="operator">×</button>
+            <button class="operator" id="divider">÷</button>
+            <button class="operator" id="minus">-</button>
+            <button class="operator" id="multiplication">×</button>
             <button class="clear">C</button>
 
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button class="operator" style="grid-row: span 2;">+</button>
+            <button class="symbol">7</button>
+            <button class="symbol">8</button>
+            <button class="symbol">9</button>
+            <button class="operator" style="grid-row: span 2;" id="plus">+</button>
             
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
+            <button class="symbol">4</button>
+            <button class="symbol">5</button>
+            <button class="symbol">6</button>
             
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button class="equals" style="grid-row: span 2;">=</button>
-            <button style="grid-column: span 2;">0</button>
-            <button>.</button>
+            <button class="symbol">1</button>
+            <button class="symbol">2</button>
+            <button class="symbol">3</button>
+            <button class="equals" style="grid-row: span 2;" id="equal">=</button>
+            <button class="symbol" style="grid-column: span 2;">0</button>
+            <button class="symbol">.</button>
         </div>
     </div>
 </body>
